--- a/Web/requirements.txt
+++ b/Web/requirements.txt
@@ -5,3 +5,6 @@ python-multipart>=0.0.9
 ultralytics>=8.2.0
 opencv-python>=4.10.0.84
 numpy>=1.26.4
+matplotlib>=3.9.0
+Pillow>=10.4.0
+imageio-ffmpeg>=0.5.1
